2002-07-25  Peter Osterlund  <petero2@telia.com>

	* (p4-menu-def): Reordered code blocks to make xemacs work
	  correctly.

	* (p4-activate-diff-buffer): Simplified regexp to avoid regexp
	  stack overflow when there are a lot of changes in the same
	  file.

	* Fixed problem when switching between different clients using the
	  $P4CONFIG facility. When executing some p4.el commands, an old
	  p4-output-buffer was not deleted, which had the effect that some
	  p4 commands were executed with the wrong current directory.

	* Smarter searching for the p4 executable. Searches all
	  directories in the standard search path. Searches for p4.exe if
	  running in windows.

	* (p4-print-with-rev-history-int): Fixed type conversion bug
	  exposed by emacs 21.2.1.

	* (p4-get-add-branch-files), (p4-get-have-files), (p4-is-vc):
	  Correctly handle filenames containing spaces.

	* (p4-submit), (p4-save-opened-files): When preparing for the
	  p4-submit command, only offer to save buffers that are relevant
	  to the current submit, ie disregard unsaved files from other
	  clients and buffers not under revision control.

	* (p4-noinput-buffer-action): Fixed problem with xemacs losing
	  buffer position when opening a file for edit or reverting the
	  file. From Andre Srinivasan.

	* (p4-cmd-line-flags): New helper function.

	* (p4-activate-file-change-log-buffer): Parsing of p4 changelog
	  buffers failed if case-fold-search was set to nil.

	* (p4-map-depot-files-int): Quote client related strings when
	  using them in regexps.

	* (p4-async-process-command): Set the buffer-offer-save variable
	  to minimize the risk of losing data by accidentally hitting "C-x
	  C-c".

	* (p4-detect-p4): Simplified and removed obsolete docstring.

	* (p4-submit): "p4 submit -c changeNo" now gives the user an
	  opportunity to preview and edit the change description before
	  committing.

	* (p4-exec-p4): Set correct current directory when executing p4